--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="row">
+    <div class="container text-align-center">
+      <header class="row justify-between align-center white-text page-header">
         <h1 class="col-4">Holly Phung</h1>
-        <nav class="col-6 row" >
-          <a href="#about">About</a>
-          <a href="#tech">Technologies</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
+        <nav class="col-6 row justify-evenly">
+          <a href="#about" class="white-text nav-item">About</a>
+          <a href="#tech" class="white-text nav-item">Technologies</a>
+          <a href="#projects" class="white-text nav-item">Projects</a>
+          <a href="#contact" class="white-text nav-item">Contact</a>
         </nav>
       </header>
     </div>
