Completed "Hero Image HTML"

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <a href="#contact" class="white-text nav-item">Contact</a>
         </nav>
       </header>
+      <div class="row justify-center align-center white-text">
+        <h1>HOLLY PHUNG</h1>
+      </div>
     </div>
   </body>
 </html>
