--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <a href="#contact" class="white-text nav-item">Contact</a>
         </nav>
       </header>
-      <div class="row justify-center align-center white-text">
-        <h1>HOLLY PHUNG</h1>
+      <div class="row justify-center align-center white-text hero-image">
+        <h1 class="student-name">HOLLY PHUNG</h1>
       </div>
     </div>
   </body>
