AboutMe CSS/HTML.EDIT:add img(l27), paragraph(l29)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
       <div class="row justify-center align-center white-text hero-image">
         <h1 class="student-name">HOLLY PHUNG</h1>
       </div>
+      <div id="about" class="row justify-evenly align-center pb-50 about-section">
+        <h1 class="col-12">ABOUT ME</h1>
+        <!-- <img src="../../sample.jpg" alt="Holly Phung Portrait" class="col-3 about-image"> -->
+        <div class="col-5 text-align-reset">
+          <p>
+            Write a little about yourself.
+            If writing multiple paragraphs, use a new sibling p element for every new paragraph.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
