--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <img src="assets/css-logo.png" alt="CSS 3 logo" class="col-1">
         <img src="assets/js-logo.png" alt="Javascript logo" class="col-1">
       </div>
+      <div id="projects" class="row justify-evenly pb-50 projects-section">
+        <h1 class="col-12">MY PROJECTS</h1>
+        <img src="assets/placeholder-project.png" alt="Placeholder Project" class="col-2">
+        <img src="assets/placeholder-project.png" alt="Placeholder Project" class="col-2">
+        <img src="assets/placeholder-project.png" alt="Placeholder Project" class="col-2">
+      </div>
     </div>
   </body>
 </html>
