Added photo and about me. Ccompleted page project.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
       </div>
       <div id="about" class="row justify-evenly align-center pb-50 about-section">
         <h1 class="col-12">ABOUT ME</h1>
-        <!-- <img src="../../sample.jpg" alt="Holly Phung Portrait" class="col-3 about-image"> -->
+        <img src="HOLLY PHUNG PORTRAIT.PNG" alt="Holly Phung Portrait" class="col-3 about-image">
         <div class="col-5 text-align-reset">
           <p>
-            Write a little about yourself.
-            If writing multiple paragraphs, use a new sibling p element for every new paragraph.
+            My name is Holly Phung. Im a San Diego Native but am currently residing in Utah.
+            I've started my journey studying computer science at SDCC, then I transfered to the University of Utah.
+            Due to out of state differences in credits transferring, my journey was attended another 3 years.
+            LearningFuze is my next step on continuing my education.
           </p>
         </div>
       </div>
